<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent">
	<include layout="@layout/toolbar"
	         android:id="@+id/toolbar"/>
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:layout_below="@id/toolbar"
	    tools:context=".MyActivity">
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/chapin"
				android:text="@string/chapin"
				android:onClick="chapin"/>
			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/hquad"
				android:text="@string/hquad"
				android:onClick="hquad"
				android:layout_below="@+id/chapin"/>
			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/kelly"
				android:text="@string/kelly"
				android:onClick="kelly"
				android:layout_below="@+id/hquad"/>
			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/mendy"
				android:text="@string/mendy"
				android:onClick="mendy"
				android:layout_below="@+id/kelly"/>
			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/noble"
				android:text="@string/noble"
				android:onClick="noble"
				android:layout_below="@+id/mendy"/>
			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/roose"
				android:text="@string/roosevelt"
				android:onClick="roose"
				android:layout_below="@+id/noble"/>
			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/roth"
				android:text="@string/roth"
				android:onClick="roth"
				android:layout_below="@+id/roose"/>
			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/schomb"
				android:text="@string/schomburg"
				android:onClick="schom"
				android:layout_below="@+id/roth"/>
			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/tabler"
				android:text="@string/tabler"
				android:onClick="table"
				android:layout_below="@+id/schomb"/>
			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/west"
				android:text="@string/west"
				android:onClick="west"
				android:layout_below="@+id/tabler"/>
			<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/south"
				android:text="@string/southhampton"
				android:onClick="south"
				android:layout_below="@+id/west"/>
		</RelativeLayout>
	</ScrollView>
</RelativeLayout>